--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hint_email">Digite seu email</string>
     <string name="hint_password">Digite sua senha</string>
     <string name="btn_login">Login</string>
+    <string name="logout">Sair</string>
 </resources>
