Corrigindo problemas na chamada do servidor. Criando layout para post.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="username">Username</string>
     <string name="placeholder_image">Imagem placeholder</string>
     <string name="description">Descrição</string>
+    <string name="placeholder_text">Placeholder text</string>
 </resources>
