--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="placeholder_image">Imagem placeholder</string>
     <string name="description">Descrição</string>
     <string name="placeholder_text">Placeholder text</string>
+    <string name="load_feed">Carregar Feed</string>
 </resources>
