--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="placeholder_image">Imagem placeholder</string>
     <string name="description">Descrição</string>
     <string name="placeholder_text">Placeholder text</string>
-    <string name="load_feed">Carregar Feed</string>
+    <string name="load_feed">Carregar Postagens</string>
     <string name="add_new_post">Criar novo post</string>
     <string name="add_photo">Adicionar Foto</string>
     <string name="create_post">criar post</string>
